--- a/Data Science Project/Data_Science_Project_1.ipynb
+++ b/Data Science Project/Data_Science_Project_1.ipynb
@@ -16,6 +16,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Analysis and Cleaning"
+      ],
+      "metadata": {
+        "id": "ZBEW8heWdMGX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -26,6 +35,24 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Read and Display Initial Data"
+      ],
+      "metadata": {
+        "id": "EB1dirFYdQ20"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Reading a CSV file and displaying the first 10 rows of the DataFrame"
+      ],
+      "metadata": {
+        "id": "S-b1dvzii1cz"
+      }
     },
     {
       "cell_type": "code",
@@ -467,6 +494,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## DataFrame Dimensions"
+      ],
+      "metadata": {
+        "id": "oF_l3kgheXnT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Displaying the dimensions of the DataFrame (number of rows and columns)"
+      ],
+      "metadata": {
+        "id": "8W4qp3YEi3Ms"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df.shape"
@@ -491,6 +536,24 @@
           "execution_count": 5
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Unique Values in 'RAM' Column"
+      ],
+      "metadata": {
+        "id": "JLj7Z9Hjefnq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Displaying unique values in the 'RAM' column"
+      ],
+      "metadata": {
+        "id": "iICJpzc9i5ZQ"
+      }
     },
     {
       "cell_type": "code",
@@ -519,6 +582,24 @@
           "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## General DataFrame Information"
+      ],
+      "metadata": {
+        "id": "kr07s559ekBE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Displaying general information about the DataFrame, including data types and non-null counts"
+      ],
+      "metadata": {
+        "id": "Oog7AmYhi8A4"
+      }
     },
     {
       "cell_type": "code",
@@ -556,6 +637,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Descriptive Statistics for Numeric Columns"
+      ],
+      "metadata": {
+        "id": "M1Sg1Uw1elNy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Displaying descriptive statistics for numeric columns"
+      ],
+      "metadata": {
+        "id": "GqLnHHChi_PG"
+      }
     },
     {
       "cell_type": "code",
@@ -862,6 +961,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Handling Null Values"
+      ],
+      "metadata": {
+        "id": "vU384jFxepqe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Displaying the count of null values in each column"
+      ],
+      "metadata": {
+        "id": "37ZY-phgjGvv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df.isna().sum()"
@@ -894,6 +1011,24 @@
           "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Handling Unique Values"
+      ],
+      "metadata": {
+        "id": "SpgzVlSIeyM7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Displaying the count of unique values in each column"
+      ],
+      "metadata": {
+        "id": "5VWMh_YvjK11"
+      }
     },
     {
       "cell_type": "code",
@@ -1735,6 +1870,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Cleaning 'Price ($)'"
+      ],
+      "metadata": {
+        "id": "78-17JrTjRbV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cleaning the 'Price ($)' column by removing symbols and converting it to integer"
+      ],
+      "metadata": {
+        "id": "xVpClDrIjTx3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#cleaning\n",
@@ -2098,6 +2251,33 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Further Data Analysis"
+      ],
+      "metadata": {
+        "id": "BOc78XUMjjaU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Regular Expression for String Cleaning"
+      ],
+      "metadata": {
+        "id": "S3-DvMX2jl6R"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Using regular expressions to clean values in strings"
+      ],
+      "metadata": {
+        "id": "Sl97RbAAjoKx"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import re"
@@ -2139,6 +2319,24 @@
           "execution_count": 19
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Descriptive Statistics for Numeric Series"
+      ],
+      "metadata": {
+        "id": "YyN_R09qjsOe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Displaying descriptive statistics for a numeric Series"
+      ],
+      "metadata": {
+        "id": "6iZn3ZaEjtKs"
+      }
     },
     {
       "cell_type": "code",
@@ -2202,6 +2400,24 @@
           "execution_count": 21
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Cleaning and Type Conversion of 'RAM ' Column"
+      ],
+      "metadata": {
+        "id": "TMZc8NFSj3mj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cleaning and converting the data in the 'RAM ' column"
+      ],
+      "metadata": {
+        "id": "xfYcuHfWj4V8"
+      }
     },
     {
       "cell_type": "code",
@@ -2529,6 +2745,24 @@
           "execution_count": 22
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Sorting and Filtering Data"
+      ],
+      "metadata": {
+        "id": "wjOcvnOPkCw7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Sorting the DataFrame based on multiple columns and applying filters"
+      ],
+      "metadata": {
+        "id": "89c_vkiBkDji"
+      }
     },
     {
       "cell_type": "code",
@@ -5667,6 +5901,24 @@
           "execution_count": 31
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Grouping and Aggregating Data"
+      ],
+      "metadata": {
+        "id": "klD8pBxHkNty"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Grouping and calculating averages for high-level analysis"
+      ],
+      "metadata": {
+        "id": "w-XPeBp3kOyq"
+      }
     },
     {
       "cell_type": "code",
@@ -8912,6 +9164,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Transformation and Reshaping"
+      ],
+      "metadata": {
+        "id": "BRxaKS8qkVbT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Reshaping data using the melt method"
+      ],
+      "metadata": {
+        "id": "jXjjTB08kWOg"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df_melt = df.melt(id_vars = ['Brand', 'Model', 'RAM ', 'Storage ', 'Screen Size (inches)', 'Camera (MP)'], \\\n",
@@ -11623,6 +11893,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Categorization and Binning"
+      ],
+      "metadata": {
+        "id": "vV12gbFmkj5h"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Creating price categories using quantiles"
+      ],
+      "metadata": {
+        "id": "PP0Rf0Njkmm7"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# mengkategorisasikan nilai Price menjadi 4 kategori dengan jumlah ukuran yang sama, misal Bronze, Silver, Gold, Platinum\n",
@@ -12988,6 +13276,24 @@
           "execution_count": 56
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Adding Columns and Using Rank"
+      ],
+      "metadata": {
+        "id": "lGRzxH6Kkprk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Adding a new column and using the rank function on data"
+      ],
+      "metadata": {
+        "id": "DDzd-AlBkqZw"
+      }
     },
     {
       "cell_type": "code",
@@ -14372,6 +14678,24 @@
           "execution_count": 59
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Selection Using isin"
+      ],
+      "metadata": {
+        "id": "I06Id2XLktxC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Selecting data based on specific criteria using the isin method"
+      ],
+      "metadata": {
+        "id": "-_u8R6fokunq"
+      }
     },
     {
       "cell_type": "code",
