--- a/Data Science Project/Data_Science_Project_1.ipynb
+++ b/Data Science Project/Data_Science_Project_1.ipynb
@@ -28,7 +28,9 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns"
       ],
       "metadata": {
         "id": "H0QGxR2axK_3"
@@ -1067,6 +1069,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menampilkan nilai unik dari kolom 'Price ($)'\n",
         "df['Price ($)'].unique()"
       ],
       "metadata": {
@@ -1104,6 +1107,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menampilkan nilai unik dari kolom \"Screen Size (inches)\"\n",
         "df[\"Screen Size (inches)\"].unique()"
       ],
       "metadata": {
@@ -1135,6 +1139,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menampilkan baris DataFrame dengan 'Screen Size (inches)' sama dengan '6.8 + 3.9'\n",
         "df[df['Screen Size (inches)'] == '6.8 + 3.9']"
       ],
       "metadata": {
@@ -1294,6 +1299,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menampilkan baris DataFrame dengan 'Screen Size (inches)' sama dengan '7.6 (unfolded)'\n",
         "df[df['Screen Size (inches)'] == '7.6 (unfolded)']"
       ],
       "metadata": {
@@ -1453,6 +1459,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menampilkan baris DataFrame di mana nilai dalam kolom 'Price ($)' bukan numerik\n",
         "df[~df['Price ($)'].str.isnumeric()]"
       ],
       "metadata": {
@@ -1895,6 +1902,7 @@
         "df['Price ($)'] = df['Price ($)'].str.replace(',','')\n",
         "df['Price ($)'] = df['Price ($)'].str.replace(' ','')\n",
         "df['Price ($)'] = df['Price ($)'].astype(int)\n",
+        "# Menampilkan ringkasan statistik deskriptif setelah membersihkan kolom 'Price ($)'\n",
         "df.describe()"
       ],
       "metadata": {
@@ -2216,6 +2224,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menampilkan informasi umum DataFrame setelah pembersihan\n",
         "df.info()"
       ],
       "metadata": {
@@ -2280,6 +2289,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menggunakan ekspresi reguler untuk menghapus karakter non-digit dari string\n",
         "import re"
       ],
       "metadata": {
@@ -2341,6 +2351,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Seri numerik: Menyajikan statistik deskriptif untuk melihat ringkasan data\n",
         "s = pd.Series([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
         "s.describe()"
       ],
@@ -2422,6 +2433,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Membersihkan nilai pada kolom 'RAM ' dengan menghapus karakter selain digit\n",
         "#df['RAM'] = df['RAM'].str.replace('GB','')\n",
         "#df['RAM'] = df['RAM'].str.replace(' GB','')\n",
         "#df['RAM '] = df['RAM '].astype(int)\n",
@@ -2767,6 +2779,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Mengurutkan DataFrame berdasarkan 'Battery Capacity (mAh)' secara ascending\n",
         "df.sort_values(by = ['Battery Capacity (mAh)'])"
       ],
       "metadata": {
@@ -3186,6 +3199,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Mengurutkan DataFrame berdasarkan 'Battery Capacity (mAh)' dan 'Price ($)' secara bersamaan\n",
         "df.sort_values(by = ['Battery Capacity (mAh)', 'Price ($)'], ascending = [True, False])\n",
         "#df.sort_values(by = ['Battery Capacity (mAh)', 'Price ($)'], ascending = [True, True])"
       ],
@@ -3606,6 +3620,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Memilih 5 entri teratas dengan 'Battery Capacity (mAh)' terbesar\n",
         "df.nlargest(5, 'Battery Capacity (mAh)')"
       ],
       "metadata": {
@@ -4710,6 +4725,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Memilih subset DataFrame dengan menggunakan iloc untuk baris ke-5 hingga ke-9 dan kolom ke-1 hingga ke-3\n",
         "df.iloc[5:10, 1:4]"
       ],
       "metadata": {
@@ -5011,6 +5027,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menambahkan kolom 'battery dollar' yang mencerminkan rasio 'Battery Capacity (mAh)' terhadap 'Price ($)'\n",
         "df['battery dollar'] = df['Battery Capacity (mAh)'] / df['Price ($)']\n",
         "df\n",
         "#semakin tinggi nilai battery dollar, berarti semakin besar kapasitasnya tetapi harganya murah"
@@ -5444,6 +5461,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menampilkan nilai pertama pada kolom kedua\n",
         "df.iloc[0,1]"
       ],
       "metadata": {
@@ -5474,6 +5492,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Mengurutkan DataFrame berdasarkan 'battery dollar' secara descending\n",
         "df.sort_values(by=['battery dollar'], ascending = False)"
       ],
       "metadata": {
@@ -5923,6 +5942,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Mengelompokkan data berdasarkan 'Brand' dengan menghitung rata-rata kapasitas baterai dan harga minimum\n",
         "df.groupby(['Brand']).agg({'Battery Capacity (mAh)': ['mean'], 'Price ($)': ['min']})"
       ],
       "metadata": {
@@ -6300,6 +6320,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Mengelompokkan data berdasarkan 'Brand' dan menunjukkan rata-rata harga dan kapasitas baterai\n",
         "df.groupby(['Brand'])['Battery Capacity (mAh)', 'Price ($)'].mean().sort_values(by=['Price ($)'])"
       ],
       "metadata": {
@@ -6675,6 +6696,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Mengelompokkan data berdasarkan 'Brand' dengan menunjukkan rata-rata harga\n",
         "df.groupby('Brand').agg(average_price = ('Price ($)', 'mean'), sum_price = ('Price ($)', 'sum'))"
       ],
       "metadata": {
@@ -7042,6 +7064,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Membuat tabel silang antara 'Brand' dan 'RAM '\n",
         "pd.crosstab(df['Brand'], df['RAM '])"
       ],
       "metadata": {
@@ -7517,6 +7540,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Membuat pivot table dengan indeks 'Brand' dan nilai rata-rata 'Price ($)'\n",
         "df.pivot_table(index = ['Brand'], values = 'Price ($)', aggfunc = 'mean')"
       ],
       "metadata": {
@@ -9184,6 +9208,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menggabungkan beberapa kolom menjadi satu kolom 'value' dengan 'melt'\n",
         "df_melt = df.melt(id_vars = ['Brand', 'Model', 'RAM ', 'Storage ', 'Screen Size (inches)', 'Camera (MP)'], \\\n",
         "       var_name = 'nama_kolom', value_name = 'nilai')\n",
         "df_melt"
@@ -9605,6 +9630,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Mengurutkan hasil melt berdasarkan 'Brand'\n",
         "df_melt.sort_values(by = ['Brand']).head(20)"
       ],
       "metadata": {
@@ -10625,6 +10651,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menumpuk DataFrame untuk membentuk tata letak yang berbeda\n",
         "df_stacked = df.set_index(['Brand', 'Model', 'RAM ', 'Storage ', 'Screen Size (inches)', 'Camera (MP)']).stack().reset_index()\n",
         "df_stacked"
       ],
@@ -11045,6 +11072,8 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "# Mengganti nama kolom yang telah di-stack\n",
         "df_stacked.rename(columns = {'level_6': 'atribut', 0:'value'})"
       ],
       "metadata": {
@@ -12280,6 +12309,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menambahkan kolom 'results' ke DataFrame\n",
         "df['results'] = results\n",
         "df"
       ],
@@ -12737,6 +12767,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menunjukkan distribusi\n",
         "df['results'].value_counts()"
       ],
       "metadata": {
@@ -12767,6 +12798,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Mengatur batas kategori harga secara manual\n",
         "bins = [0, 1000, 2000, 3000, 4000, 5000, 10000]\n",
         "labels = [1, 2, 3, 4, 5, 6]\n",
         "df['binned_battery'] = pd.cut(df['Battery Capacity (mAh)'], bins = bins, labels = labels)"
@@ -13248,6 +13280,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menunjukkan distribusi kategori kapasitas baterai\n",
         "df['binned_battery'].value_counts()"
       ],
       "metadata": {
@@ -13298,6 +13331,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menambahkan kolom 'rank_price' yang memberikan peringkat harga\n",
         "df['rank_price'] = df['Price ($)'].rank(ascending = True)\n",
         "df"
       ],
@@ -13779,6 +13813,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Mengurutkan DataFrame berdasarkan peringkat harga\n",
         "df.sort_values(by = ['rank_price'])"
       ],
       "metadata": {
@@ -14259,6 +14294,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Memilih entri yang memiliki peringkat harga 4.5\n",
         "df[df['rank_price'] == 4.5]"
       ],
       "metadata": {
@@ -14700,6 +14736,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Menyeleksi entri dengan 'Brand' berisi 'Samsung' atau 'Xiaomi'\n",
         "body = ['Samsung', 'Xiaomi']\n",
         "df[df['Brand'].isin(body)]"
       ],
